--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,104 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-21 17:39:51 -0500 
+%% Created for Jeff Erickson at 2015-08-24 10:47:20 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cite-key,
+	Date-Added = {2015-08-24 15:35:24 +0000},
+	Date-Modified = {2015-08-24 15:35:24 +0000}}
+
+@incollection{hy-nrmsi-14,
+	Arxiv = {0812.1241},
+	Author = {Hagge, Tobias J. and Yazinski, Jonathan T.},
+	Booktitle = {Knots in Poland III. Part III},
+	Date-Added = {2015-08-24 15:34:45 +0000},
+	Date-Modified = {2015-08-24 15:39:25 +0000},
+	Editor = {Przytycki, Józef H. and Traczyk, Paweł},
+	Number = {103},
+	Pages = {101--110},
+	Publisher = {Inst. Math., Polish Acad. Sci.},
+	Read = {1},
+	Series = {Banach Center Publ.},
+	Title = {On the necessity of {Reidemeister} move 2 for simplifying immersed planar curves},
+	Year = {2014}}
+
+@article{hmnpt-cvptbung-11,
+	Author = {Henrich, Allison and MacNaughton, Noel and Narayan, Sneha and Pechenik, Oliver and Townsend, Jennifer},
+	Date-Added = {2015-08-24 15:20:49 +0000},
+	Date-Modified = {2015-08-24 15:35:30 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {4},
+	Pages = {625--650},
+	Read = {1},
+	Title = {Classical and Virtual Pseudodiagram Theory and New Bounds on Unknotting Numbers and Genus},
+	Volume = {20},
+	Year = {2011}}
+
+@article{h-tnk-14,
+	Author = {Hanaki, Ryo},
+	Date-Added = {2015-08-24 15:16:04 +0000},
+	Date-Modified = {2015-08-24 15:16:37 +0000},
+	Journal = {J. Math. Soc. Japan},
+	Number = {2},
+	Pages = {435--447},
+	Read = {1},
+	Title = {Trivializing number of knots},
+	Volume = {66},
+	Year = {2014}}
+
+@article{h-pdkls-10,
+	Author = {Hanaki, Ryo},
+	Date-Added = {2015-08-24 15:13:26 +0000},
+	Date-Modified = {2015-08-24 15:16:01 +0000},
+	Journal = {Osaka J. Math},
+	Number = {3},
+	Pages = {863--883},
+	Read = {1},
+	Title = {Pseudo diagrams of knots, links and spatial graphs},
+	Volume = {47},
+	Year = {2010}}
+
+@article{t-istpfp-96,
+	Author = {Tabachnikov, Serge},
+	Date-Added = {2015-08-24 13:47:50 +0000},
+	Date-Modified = {2015-08-24 13:54:26 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Keywords = {doodles, "rondles"},
+	Number = {4},
+	Pages = {531--552},
+	Read = {1},
+	Title = {Invariants of smooth triple point free plane curves},
+	Volume = {5},
+	Year = {1996}}
+
+@article{t-k1-1876,
+	Author = {Tait, Peter Guthrie},
+	Date-Added = {2015-08-24 03:21:51 +0000},
+	Date-Modified = {2015-08-24 03:27:30 +0000},
+	Journal = {Proc. Royal Soc. Edinburgh},
+	Number = {1},
+	Pages = {145--190},
+	Title = {On Knots {I}},
+	Volume = {28},
+	Year = {1876–7}}
+
+@article{p-mgsrm-10,
+	Arxiv = {0908.3127},
+	Author = {Polyak, Michael},
+	Date-Added = {2015-08-22 17:53:36 +0000},
+	Date-Modified = {2015-08-22 17:55:23 +0000},
+	Journal = {Quantum Topology},
+	Number = {4},
+	Pages = {399--411},
+	Read = {1},
+	Title = {Minimal generating sets of {Reidemeister} moves},
+	Volume = {1},
+	Year = {2010}}
 
 @book{l-ekt-15,
 	Author = {Lackenby, Marc},
@@ -1006,10 +1098,14 @@
 @article{itt-swhkp-15,
 	Author = {Ito, Noburo and Takimura, Yusuke and Taniyama, Kouki},
 	Date-Added = {2015-07-17 02:04:02 +0000},
-	Date-Modified = {2015-07-17 17:28:01 +0000},
+	Date-Modified = {2015-08-24 15:08:10 +0000},
 	Journal = {Osaka J. Math},
+	Number = {3},
+	Pages = {617--647},
+	Read = {1},
 	Title = {Strong and weak (1, 3) homotopies on knot projections},
-	Year = {to appear}}
+	Volume = {52},
+	Year = {2015}}
 
 @article{st-pcigm-13,
 	Arxiv = {1210.7315},
@@ -14344,13 +14440,13 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{m-tev-1863,
 	Author = {Möbius, August F.},
 	Date-Added = {2009-09-18 17:55:11 -0500},
-	Date-Modified = {2012-01-27 09:26:33 +0000},
+	Date-Modified = {2015-08-23 14:07:26 +0000},
 	Journal = {Ber. Sächs. Akad. Wiss. Leipzig, Math.-Phys. Kl.},
-	Keywords = {classification},
+	Keywords = {surface classification},
 	Note = {\textit{Gesammelte Werke} 2:433--471, Liepzig, 1886},
 	Pages = {18--57},
 	Read = {1},
-	Title = {Theorie der elementaren {Verwandtschaften}},
+	Title = {Theorie der elementaren {Verwandtschaft}},
 	Volume = {17},
 	Year = {1863}}
 
