--- a/topology.bib
+++ b/topology.bib
@@ -2,16 +2,35 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-24 10:47:20 -0500 
+%% Created for Jeff Erickson at 2015-08-24 16:01:05 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{cite-key,
-	Date-Added = {2015-08-24 15:35:24 +0000},
-	Date-Modified = {2015-08-24 15:35:24 +0000}}
+@article{d-alms-06,
+	Arxiv = {math/0208153},
+	Author = {Dynnikov, Ivan A.},
+	Date-Added = {2015-08-24 18:05:22 +0000},
+	Date-Modified = {2015-08-24 18:06:31 +0000},
+	Journal = {Fund. Math.},
+	Pages = {29--76},
+	Title = {Arc-presentations of links: {Monotonic} simplification},
+	Volume = {190},
+	Year = {2006}}
+
+@article{hn-udrqn-10,
+	Author = {Hass, Joel and Nowik, Tal},
+	Date-Added = {2015-08-24 15:55:52 +0000},
+	Date-Modified = {2015-08-24 15:57:02 +0000},
+	Journal = {Discrete Comput. Geom.},
+	Number = {1},
+	Pages = {91--95},
+	Read = {1},
+	Title = {Unknot diagrams requiring a quadratic number of {Reidemeister} moves to untangle},
+	Volume = {44},
+	Year = {2010}}
 
 @incollection{hy-nrmsi-14,
 	Arxiv = {0812.1241},
@@ -1210,9 +1229,10 @@
 	Year = {1891}}
 
 @article{hhn-unnrm-12,
+	Arxiv = {1012.4131},
 	Author = {Hayashi, Chuichiro and Hayashi, Miwa and Nowik, Tahl},
 	Date-Added = {2015-07-08 22:13:49 +0000},
-	Date-Modified = {2015-07-08 22:16:48 +0000},
+	Date-Modified = {2015-08-24 15:53:21 +0000},
 	Journal = {Topology Appl.},
 	Pages = {1467--1474},
 	Read = {1},
