--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-24 16:01:05 -0500 
+%% Created for Jeff Erickson at 2015-08-26 17:35:46 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{rt-gcphg-84,
+	Author = {Rosenthiel, Pierre and Tarjan, Robert E.},
+	Date-Added = {2015-08-26 22:35:08 +0000},
+	Date-Modified = {2015-08-26 22:35:32 +0000},
+	Journal = {J. Algorithms},
+	Pages = {375--390},
+	Title = {Gauss codes, planar {Hamiltonian} graphs, and stack-sortable permutations},
+	Volume = {5},
+	Year = {1984}}
 
 @article{d-alms-06,
 	Arxiv = {math/0208153},
