--- a/topology.bib
+++ b/topology.bib
@@ -7,7 +7,11 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@mastersthesis{s-iifpd-01,
+	Author = {Song, Xiaohuan},
+	School = {University of Victoria},
+	Title = {Implementation issues for {Feo} and {Provan}'s delta-wye-delta reduction algorithm},
+	Year = {2001}}
 
 @article{rt-gcphg-84,
 	Author = {Rosenthiel, Pierre and Tarjan, Robert E.},
