--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-26 17:35:46 -0500 
+%% Created for Jeff Erickson at 2015-08-24 16:01:05 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,16 +12,6 @@
 	School = {University of Victoria},
 	Title = {Implementation issues for {Feo} and {Provan}'s delta-wye-delta reduction algorithm},
 	Year = {2001}}
-
-@article{rt-gcphg-84,
-	Author = {Rosenthiel, Pierre and Tarjan, Robert E.},
-	Date-Added = {2015-08-26 22:35:08 +0000},
-	Date-Modified = {2015-08-26 22:35:32 +0000},
-	Journal = {J. Algorithms},
-	Pages = {375--390},
-	Title = {Gauss codes, planar {Hamiltonian} graphs, and stack-sortable permutations},
-	Volume = {5},
-	Year = {1984}}
 
 @article{d-alms-06,
 	Arxiv = {math/0208153},
@@ -1420,7 +1410,7 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 	Year = {1996}}
 
 @article{lw-igopc-96,
-	Author = {Lin, Xioa-Song and Wang, Zhenghan},
+	Author = {Lin, Xiao-Song and Wang, Zhenghan},
 	Date-Added = {2014-10-12 22:09:46 +0000},
 	Date-Modified = {2014-10-12 22:10:36 +0000},
 	Journal = {J. Diff. Geom.},
