--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-06-29 15:13:58 -0500 
+%% Created for Jeff Erickson at 2015-08-29 12:01:40 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@phdthesis{g-cpssd-96,
+	Author = {Gremban, Keith},
+	Comments = {SDD to Laplacian reduction},
+	Date-Added = {2015-08-29 16:00:20 +0000},
+	Date-Modified = {2015-08-29 16:05:15 +0000},
+	Note = {Tech. Rep. CMU-CS-96-123},
+	Read = {1},
+	School = {Carnegie Mellon University},
+	Title = {Combinatorial Preconditioners for Sparse, Symmetric, Diagonally Dominant Linear Systems},
+	Url = {https://www.cs.cmu.edu/~glmiller/Publications/b2hd-GrembanPHD.html},
+	Year = {1996}}
 
 @article{cct-egbep-03,
 	Author = {Chan, Wun-Tat and Chin, Francis Y. L. and Ting, Hing-Fung},
