--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-26 17:35:46 -0500 
+%% Created for Jeff Erickson at 2015-08-27 11:02:02 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -109,10 +109,11 @@
 @article{t-k1-1876,
 	Author = {Tait, Peter Guthrie},
 	Date-Added = {2015-08-24 03:21:51 +0000},
-	Date-Modified = {2015-08-24 03:27:30 +0000},
+	Date-Modified = {2015-08-27 15:38:04 +0000},
 	Journal = {Proc. Royal Soc. Edinburgh},
 	Number = {1},
 	Pages = {145--190},
+	Read = {1},
 	Title = {On Knots {I}},
 	Volume = {28},
 	Year = {1876–7}}
