--- a/topology.bib
+++ b/topology.bib
@@ -2,15 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-27 11:02:02 -0500 
+%% Created for Jeff Erickson at 2015-08-29 12:18:55 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@phdthesis{b-pndg-07,
+	Author = {Batchu, Umalatha N.},
+	Date-Added = {2015-08-29 17:13:22 +0000},
+	Date-Modified = {2015-08-29 17:18:04 +0000},
+	Read = {1},
+	School = {Stevens Inst. Tech.},
+	Title = {Projective Non-Planar Delta-Wye-Delta Graphs},
+	Type = {{Ph.D.} dissertation},
+	Year = {2007}}
+
 @mastersthesis{s-iifpd-01,
 	Author = {Song, Xiaohuan},
+	Date-Modified = {2015-08-29 17:18:53 +0000},
 	School = {University of Victoria},
 	Title = {Implementation issues for {Feo} and {Provan}'s delta-wye-delta reduction algorithm},
+	Type = {{M.Sc.} {Thesis}},
 	Year = {2001}}
 
 @article{d-alms-06,
