--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,31 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-29 12:01:40 -0500 
+%% Created for Jeff Erickson at 2015-08-29 12:46:47 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{mmprw-fesp-05,
+	Author = {Maggs, Bruce M. and Miller, Gary L. and Parekh, Ojas and Ravi, R. and Woo, Shan Leung Maverick},
+	Booktitle = {Proc. 17th Ann. ACM Symp. Parallelism Alg. Arch.},
+	Date-Added = {2015-08-29 17:28:40 +0000},
+	Date-Modified = {2015-08-29 17:37:25 +0000},
+	Pages = {176--185},
+	Title = {Finding Effective Support-Tree Preconditioners},
+	Year = {2005}}
+
+@inproceedings{kosz-scass-13,
+	Arxiv = {1301.6628},
+	Author = {Kelner, Jonathan A. and Orecchia, Lorenzo and Sidford, Aaron and Zhu, Zeyuan Allen},
+	Booktitle = {Proc. 45th Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2015-08-29 17:24:16 +0000},
+	Date-Modified = {2015-08-29 17:25:42 +0000},
+	Pages = {911--920},
+	Title = {A Simple, Combinatorial Algorithm for Solving {SDD} Systems in Nearly-Linear Timeinear Time},
+	Year = {2013}}
 
 @phdthesis{g-cpssd-96,
 	Author = {Gremban, Keith},
@@ -19,7 +38,8 @@
 	School = {Carnegie Mellon University},
 	Title = {Combinatorial Preconditioners for Sparse, Symmetric, Diagonally Dominant Linear Systems},
 	Url = {https://www.cs.cmu.edu/~glmiller/Publications/b2hd-GrembanPHD.html},
-	Year = {1996}}
+	Year = {1996},
+	Bdsk-Url-1 = {https://www.cs.cmu.edu/~glmiller/Publications/b2hd-GrembanPHD.html}}
 
 @article{cct-egbep-03,
 	Author = {Chan, Wun-Tat and Chin, Francis Y. L. and Ting, Hing-Fung},
