--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-29 12:18:55 -0500 
+%% Created for Jeff Erickson at 2015-08-29 14:12:39 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{ehln-irkl-14,
+	Arxiv = {1411.3308},
+	Author = {Even-Zohar, Chaim and Hass, Joel and Linial, Nati and Nowik, Tahl},
+	Date-Added = {2015-08-29 18:52:53 +0000},
+	Date-Modified = {2015-08-29 19:12:33 +0000},
+	Howpublished = {Preprint},
+	Month = {November},
+	Read = {1},
+	Title = {Invariants of random knots and links},
+	Year = {2014}}
 
 @phdthesis{b-pndg-07,
 	Author = {Batchu, Umalatha N.},
