--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-29 14:12:39 -0500 
+%% Created for Jeff Erickson at 2015-08-29 14:29:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -1071,10 +1071,11 @@
 	Year = {1996}}
 
 @article{pv-cki-01,
+	Arxiv = {math/9903158},
 	Author = {Polyak, Michael and Viro, Oleg},
 	Comments = {Casson = Vassiliev v_2 = 2nd Conway coefficient = defect},
 	Date-Added = {2015-07-17 17:11:56 +0000},
-	Date-Modified = {2015-07-17 17:46:57 +0000},
+	Date-Modified = {2015-08-29 19:29:09 +0000},
 	Journal = {J. Knot Theory Ramif.},
 	Number = {5},
 	Pages = {711--738},
