--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-29 14:29:11 -0500 
+%% Created for Jeff Erickson at 2015-08-30 11:13:30 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -7817,8 +7817,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{s-efspc-96,
 	Author = {Shumakovich, Aleksandr},
 	Date-Added = {2011-12-18 16:46:40 +0000},
-	Date-Modified = {2015-07-31 19:31:38 +0000},
-	Journal = {St. Petersburg Math. J.},
+	Date-Modified = {2015-08-30 16:13:25 +0000},
+	Journal = {St. Petersburg Math.~J.},
 	Note = {English translation of \cite{s-efspc-95}.},
 	Number = {3},
 	Pages = {445--472},
@@ -9864,8 +9864,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{bz-iple2-96,
 	Author = {Burago, Yuri D. and Zalgaller, Victor A.},
 	Date-Added = {2011-07-10 14:08:54 -0500},
-	Date-Modified = {2011-07-10 14:13:23 -0500},
-	Journal = {St. Petersburg Math. J.},
+	Date-Modified = {2015-08-30 16:13:30 +0000},
+	Journal = {St. Petersburg Math.~J.},
 	Note = {English translation of \cite{bz-iple2-95}},
 	Number = {3},
 	Pages = {369--385},
