--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,38 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-30 11:13:30 -0500 
+%% Created for Jeff Erickson at 2015-09-01 06:14:36 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{s-bcrge-97,
+	Author = {Schaeffer, Gilles},
+	Date-Added = {2015-09-01 11:13:03 +0000},
+	Date-Modified = {2015-09-01 11:14:33 +0000},
+	Journal = {Elec. J. Combin.},
+	Number = {1},
+	Pages = {\#R20},
+	Read = {1},
+	Title = {Bijective census and random generation of {Eulerian} planar maps with prescribed vertex degrees},
+	Url = {https://eudml.org/doc/119255},
+	Volume = {4},
+	Year = {1997}}
+
+@article{acdll-kpwsm-15,
+	Arxiv = {1208.5742},
+	Author = {Adams, Colin and Crawford, Thomas and DeMeo, Benjamin and Landry, Michael and Lin, Alex Tong and Montee, MurphyKate and Park, Seojung and Venkatesh, Saraswathi and Yhee, Farrah},
+	Date-Added = {2015-09-01 02:24:53 +0000},
+	Date-Modified = {2015-09-01 02:26:13 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {3},
+	Pages = {1550011 (30 pages)},
+	Read = {1},
+	Title = {Knot projections with a single multi-crossing},
+	Volume = {24},
+	Year = {2015}}
 
 @misc{ehln-irkl-14,
 	Arxiv = {1411.3308},
