--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,35 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-04 06:40:02 -0500 
+%% Created for Jeff Erickson at 2015-09-05 13:23:29 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{bz-k-03,
+	Author = {Burde, Gerhard and Zieschang, Neiher},
+	Date-Added = {2015-09-05 18:21:28 +0000},
+	Date-Modified = {2015-09-05 18:23:28 +0000},
+	Edition = {2nd Revised and Extended},
+	Publisher = {Walter de Gruyter},
+	Series = {de Gruyter Studies in Mathematics},
+	Title = {Knots},
+	Volume = {5},
+	Year = {2003}}
+
+@inproceedings{c-eklst-70,
+	Author = {Conway, John H.},
+	Booktitle = {Computational Problems in Abstract Algebra},
+	Date-Added = {2015-09-05 16:49:15 +0000},
+	Date-Modified = {2015-09-05 18:20:56 +0000},
+	Editor = {by:John Leech},
+	Pages = {329--358},
+	Publisher = {Pergamon Press},
+	Read = {1},
+	Title = {An enumeration of knots and links, and some of their algebraic properties},
+	Year = {1970}}
 
 @article{l-lknc-85,
 	Author = {Lannes, Jean},
@@ -8363,7 +8386,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @book{k-k-87,
 	Author = {Kauffman, Louis H.},
 	Date-Added = {2011-12-06 10:32:44 +0000},
-	Date-Modified = {2011-12-21 12:07:30 +0000},
+	Date-Modified = {2015-09-05 14:01:22 +0000},
+	Keywords = {textbook},
 	Publisher = {Princeton Univ. Press},
 	Read = {1},
 	Title = {On Knots},
