--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-05 13:23:29 -0500 
+%% Created for Jeff Erickson at 2015-09-05 18:26:15 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{a-tcnkl-13,
+	Arxiv = {1207.7332},
+	Author = {Adams, Colin},
+	Date-Added = {2015-09-05 23:24:50 +0000},
+	Date-Modified = {2015-09-05 23:26:14 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {2},
+	Pages = {1350006 (17 pages)},
+	Read = {1},
+	Title = {Triple crossing number of knots and links},
+	Volume = {22},
+	Year = {2013}}
 
 @book{bz-k-03,
 	Author = {Burde, Gerhard and Zieschang, Neiher},
