--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,88 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-05 18:26:15 -0500 
+%% Created for Jeff Erickson at 2015-09-06 16:43:15 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cn-eklob2-96,
+	Author = {Cromwell, Peter R. and Nutt, Ian J.},
+	Date-Added = {2015-09-06 21:35:32 +0000},
+	Date-Modified = {2015-09-06 21:38:02 +0000},
+	Journal = {Math. Proc. Cambridge Phil. Soc.},
+	Number = {2},
+	Pages = {309--319},
+	Read = {1},
+	Title = {Embedding knots and links in an open book {II.} {Bounds} on arc index},
+	Volume = {119},
+	Year = {1996}}
+
+@article{c-eklob1-95,
+	Author = {Cromwell, Peter R.},
+	Date-Added = {2015-09-06 21:33:03 +0000},
+	Date-Modified = {2015-09-06 21:35:26 +0000},
+	Journal = {Topology Appl.},
+	Number = {1},
+	Pages = {37--58},
+	Read = {1},
+	Title = {Embedding knots and links in an open book {I}: {Basic} properties},
+	Volume = {64},
+	Year = {1995}}
+
+@article{gpv-ficvk-00,
+	Arxiv = {math/9810073},
+	Author = {Goussarov, Mikhail and Polyak, Michael and Viro, Oleg},
+	Date-Added = {2015-09-06 12:18:14 +0000},
+	Date-Modified = {2015-09-06 12:27:00 +0000},
+	Journal = {Topology},
+	Number = {5},
+	Pages = {1045--1068},
+	Read = {1},
+	Title = {Finite-type invariants of classical and virtual knots},
+	Volume = {39},
+	Year = {2000}}
+
+@article{bm-fgpg-07,
+	Author = {Brinkmann, Gunnar and McKay, Brendan D.},
+	Date-Added = {2015-09-06 12:11:18 +0000},
+	Date-Modified = {2015-09-06 12:18:19 +0000},
+	Journal = {Match-Commun. Math. Comput. Chem.},
+	Number = {2},
+	Pages = {323--357},
+	Read = {1},
+	Title = {Fast generation of planar graphs},
+	Url = {http://cs.anu.edu.au/~bdm/papers/plantri-full.pdf},
+	Volume = {58},
+	Year = {2007},
+	Bdsk-Url-1 = {http://cs.anu.edu.au/~bdm/papers/plantri-full.pdf}}
+
+@article{bggmt-gsqs-05,
+	Author = {Brinkmann, Gunnar and Greenberg, Sam and Greenhill, Catherine and McKay, Brendan D. and Thomas, Robin and Wollan, Paul},
+	Date-Added = {2015-09-06 11:54:39 +0000},
+	Date-Modified = {2015-09-06 12:18:11 +0000},
+	Journal = {Discrete Math.},
+	Number = {1--3},
+	Pages = {33--54},
+	Read = {1},
+	Title = {Generation of simple quadrangulations of the sphere},
+	Volume = {305},
+	Year = {2005}}
+
+@techreport{g-ftipg-08,
+	Author = {Goussarov, Mikhail},
+	Date-Added = {2015-09-06 00:30:52 +0000},
+	Date-Modified = {2015-09-06 00:58:32 +0000},
+	Institution = {Sankt-Petersburg Department of Steklov Mathematical Institute},
+	Month = {December},
+	Note = {Translated from Russian by Oleg Viro},
+	Title = {Finite type invariants are presented by {Gauss} diagram formulas},
+	Type = {Preprint},
+	Url = {http://www.math.toronto.edu/drorbn/Goussarov/PresentedByGauss.ps},
+	Year = {2008},
+	Bdsk-Url-1 = {http://www.math.toronto.edu/drorbn/Goussarov/PresentedByGauss.ps}}
 
 @article{a-tcnkl-13,
 	Arxiv = {1207.7332},
@@ -914,15 +990,16 @@
 	Volume = {26},
 	Year = {1923}}
 
-@article{b-uvk-1897,
+@inproceedings{b-uvk-1897,
 	Author = {Brunn, Hermann},
+	Booktitle = {Verhandlungen des ersten Internationalen Mathematiker-Kongresses Zürich},
 	Date-Added = {2015-07-24 01:04:15 +0000},
-	Date-Modified = {2015-07-24 01:07:18 +0000},
-	Journal = {Verh. des intern. Math. Kongr. Zürich},
+	Date-Modified = {2015-09-06 17:21:51 +0000},
 	Pages = {256--259},
+	Publisher = {Teubner},
 	Read = {1},
 	Title = {Über verknotete {Kurven}},
-	Volume = {1},
+	Url = {http://www.mathunion.org/ICM/ICM1897/},
 	Year = {1897}}
 
 @article{m-tkd-86,
