--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,97 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-06 16:43:15 -0500 
+%% Created for Jeff Erickson at 2015-09-07 13:14:02 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{zz-cct-00,
+	Arxiv = {math-ph/0002020},
+	Author = {Zinn-Justin, Paul and Zuber, Jean-Bernard},
+	Date-Added = {2015-09-07 18:08:37 +0000},
+	Date-Modified = {2015-09-07 18:10:02 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {8},
+	Pages = {1127--1141},
+	Read = {1},
+	Title = {On the counting of colored tangles},
+	Volume = {9},
+	Year = {2000}}
+
+@article{t-epm-68,
+	Author = {Tutte, William T.},
+	Date-Added = {2015-09-07 17:54:37 +0000},
+	Date-Modified = {2015-09-07 17:55:14 +0000},
+	Journal = {Bull. Amer. Math. Soc.},
+	Number = {1},
+	Pages = {64--74},
+	Read = {1},
+	Title = {On the enumeration of planar maps},
+	Volume = {74},
+	Year = {1968}}
+
+@article{jz-tmaek-02,
+	Arxiv = {math-ph/0102015},
+	Author = {Jacobsen, Jesper L. and Zinn-Justin, Paul},
+	Date-Added = {2015-09-07 16:18:17 +0000},
+	Date-Modified = {2015-09-07 16:19:55 +0000},
+	Journal = {J. Knot Theory Ramif.},
+	Number = {5},
+	Pages = {739--758},
+	Read = {1},
+	Title = {A transfer matrix approach to the enumeration of knots},
+	Volume = {11},
+	Year = {2002}}
+
+@inproceedings{ps-ocst-03,
+	Author = {Poulalhon, Dominique and Schaeffer, Gilles},
+	Booktitle = {Proc. 30th Int. Colloq. Automata Lang. Prog.},
+	Date-Added = {2015-09-07 16:08:15 +0000},
+	Date-Modified = {2015-09-07 16:09:56 +0000},
+	Editor = {Baeten, Jos C. M. and Lenstra, Jan Karel and Parrow, Joachim and Woeginger, Gerhard J.},
+	Number = {2719},
+	Pages = {1080--1094},
+	Read = {1},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {Optimal coding and sampling of triangulations},
+	Year = {2003}}
+
+@inproceedings{s-rslpm-99,
+	Author = {Schaeffer, Gilles},
+	Booktitle = {Proc. 31st Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2015-09-07 15:50:49 +0000},
+	Date-Modified = {2015-09-07 17:47:07 +0000},
+	Editor = {760--769},
+	Read = {1},
+	Title = {Random sampling of large planar maps and convex polyhedra},
+	Year = {1999}}
+
+@article{sz-anpca-04,
+	Author = {Schaeffer, Gilles and Zinn-Justin, Paul},
+	Date-Added = {2015-09-07 15:44:54 +0000},
+	Date-Modified = {2015-09-07 15:50:29 +0000},
+	Journal = {Experimental Math.},
+	Number = {4},
+	Pages = {483--493},
+	Read = {1},
+	Title = {On the Asymptotic Number of Plane Curves and Alternating Knots},
+	Volume = {13},
+	Year = {2004}}
+
+@misc{s-pm-03,
+	Author = {Schaeffer, Gilles},
+	Date-Added = {2015-09-07 15:40:12 +0000},
+	Date-Modified = {2015-09-07 15:50:23 +0000},
+	Howpublished = {Software},
+	Month = {November},
+	Note = {Last accessed September 7, 2015},
+	Read = {1},
+	Title = {PlanarMap 1.2},
+	Url = {http://www.lix.polytechnique.fr/~schaeffe/PagesWeb/PlanarMap/index-en.html},
+	Year = {2003}}
 
 @article{cn-eklob2-96,
 	Author = {Cromwell, Peter R. and Nutt, Ian J.},
@@ -1000,7 +1085,8 @@
 	Read = {1},
 	Title = {Über verknotete {Kurven}},
 	Url = {http://www.mathunion.org/ICM/ICM1897/},
-	Year = {1897}}
+	Year = {1897},
+	Bdsk-Url-1 = {http://www.mathunion.org/ICM/ICM1897/}}
 
 @article{m-tkd-86,
 	Author = {Morton, Hugh R.},
@@ -10913,10 +10999,11 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Tutte, William T.},
 	Booktitle = {New Directions in the Theory of Graphs},
 	Date-Added = {2011-05-20 00:01:48 -0500},
-	Date-Modified = {2011-05-20 00:07:06 -0500},
+	Date-Modified = {2015-09-07 18:14:01 +0000},
 	Editor = {Harary, Frank},
 	Pages = {309--325},
 	Publisher = {Academic Press},
+	Read = {0},
 	Title = {What is a map?},
 	Year = {1971}}
 
